[gd_scene load_steps=5 format=2]

[ext_resource path="res://Font/TravelingTypewriter.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 2 )
script = ExtResource( 2 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 470.0
margin_top = 255.0
margin_right = 554.0
margin_bottom = 344.0

[node name="PlayButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_right = 84.0
margin_bottom = 27.0
text = "Play"

[node name="TutorialButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 31.0
margin_right = 84.0
margin_bottom = 58.0
text = "Tutorial"

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 62.0
margin_right = 84.0
margin_bottom = 89.0
text = "Quit"

[node name="DifficultyContainer" type="CenterContainer" parent="."]
visible = false
margin_left = 470.0
margin_top = 255.0
margin_right = 554.0
margin_bottom = 344.0

[node name="VBoxContainer" type="VBoxContainer" parent="DifficultyContainer"]
margin_left = 8.0
margin_right = 76.0
margin_bottom = 89.0

[node name="EasyButton" type="Button" parent="DifficultyContainer/VBoxContainer"]
margin_right = 68.0
margin_bottom = 27.0
text = "Easy"

[node name="NormalButton" type="Button" parent="DifficultyContainer/VBoxContainer"]
margin_top = 31.0
margin_right = 68.0
margin_bottom = 58.0
text = "Normal"

[node name="HardButton" type="Button" parent="DifficultyContainer/VBoxContainer"]
margin_top = 62.0
margin_right = 68.0
margin_bottom = 89.0
text = "Hard"

[node name="Title" type="Label" parent="."]
margin_left = 448.0
margin_top = 186.0
margin_right = 576.0
margin_bottom = 207.0
text = "Radar Operator"
align = 1
valign = 1

[node name="Difficulty" type="Label" parent="."]
visible = false
margin_left = 448.0
margin_top = 216.0
margin_right = 576.0
margin_bottom = 237.0
text = "Difficulty"
align = 1
valign = 1

[connection signal="pressed" from="CenterContainer/VBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/TutorialButton" to="." method="_on_TutorialButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="DifficultyContainer/VBoxContainer/EasyButton" to="." method="_on_EasyButton_pressed"]
[connection signal="pressed" from="DifficultyContainer/VBoxContainer/NormalButton" to="." method="_on_NormalButton_pressed"]
[connection signal="pressed" from="DifficultyContainer/VBoxContainer/HardButton" to="." method="_on_HardButton_pressed"]
